# colabchess

./: .gitignore  ARCHITECTURE.md  README.md  requirement.md
apps/api/: README.md  pyproject.toml
apps/api/engine/: schemas.py
apps/api/handlers/: api.py
apps/api/lib/: chess_rules.py  db.py
apps/api/tests/: test_chess_rules.py  test_db.py  test_handlers.py  test_schemas.py
apps/dashboard/: README.md  index.html  main.py  pyproject.toml
apps/dashboard/static/: index.html
apps/web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/game/[id]/: page.tsx
apps/web/app/llms.txt/: route.ts
apps/web/app/play.md/: route.ts
apps/web/components/: AgentCounter.tsx  CastGrid.tsx  CopyableCommand.tsx  GameViewer.tsx  LandingBoard.tsx  NegotiationBars.tsx  StrategyGrid.tsx  TurnFlow.tsx
apps/web/lib/: agents.ts  events.test.ts  events.ts  turns.test.ts  turns.ts  types.ts
infra/: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: colabchess-stack.ts
infra/test/: colabchess-stack.test.ts
