[project]
name = "chessminds-dashboard"
version = "0.1.0"
description = "Local-only analytics dashboard for Chess of Minds"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "boto3>=1.34,<2",
    "python-dateutil>=2.9,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["main.py", "static/**"]
